# aleph-compiler

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.ts  mod.ts  mod_test.ts  test.ts  types.ts  version.ts
.github/workflows/: ci.yml
src/: css.rs  hmr.rs  lib.rs  minifier.rs  resolve_fold.rs  resolver.rs  swc.rs  swc_helpers.rs  tests.rs
testdata/: gsi-client.js
