[package]
name = "aleph-compiler"
version = "0.6.7"
description = "The compiler of Aleph.js written in Rust."
repository = "https://github.com/alephjs/aleph.js"
authors = ["The Aleph.js authors"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.58"
base64 = "0.13.0"
import_map = "0.11.0"
lazy_static = "1.4.0"
path-slash = "0.1.5"
pathdiff = "0.2.1"
regex = "1.5.6"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
url = "2.2.2"

# parcel css
cssparser = "0.29.6"
parcel_css = "1.0.0-alpha.27"
parcel_sourcemap = "2.0.5"

# swc
# docs: https://swc.rs
# crate: https://crates.io/search?q=swc_ecmascript
swc_atoms = "0.2.13"
swc_common = { version = "0.20.1", features = ["sourcemap", "concurrent", "perf"] }
swc_ecmascript = { version = "0.175.0", features = ["codegen", "parser", "utils", "visit"] }
swc_ecma_transforms = { version = "0.170.0", features = ["proposal", "typescript", "react", "compat", "optimization" ] }
swc_ecma_minifier = "0.131.0"

# wasm-bindgen
# docs: https://rustwasm.github.io/docs/wasm-bindgen
wasm-bindgen = {version = "0.2.81", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.58"

[features]
default = ["console_error_panic_hook"]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
# optimization for size (more aggressive)
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
