[package]
name = "aleph-compiler"
version = "0.9.2"
description = "The compiler of Aleph.js written in Rust."
repository = "https://github.com/alephjs/aleph.js"
authors = ["The Aleph.js authors"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
import_map = "0.15.0"
path-slash = "0.2.1"
pathdiff = "0.2.1"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
url = "2.3.1"

# parcel css
cssparser = "0.29.6"
lightningcss = "1.0.0-alpha.40"
parcel_sourcemap = "2.1.1"

# swc
# docs: https://swc.rs
# crate: https://crates.io/search?q=swc_ecmascript
swc_atoms = "0.4.38"
swc_common = { version = "0.29.33", features = ["sourcemap", "perf"] }
swc_ecmascript = { version = "0.218.6", features = ["codegen", "parser", "utils", "visit"] }
swc_ecma_transforms = { version = "0.208.4", features = ["proposal", "typescript", "react", "compat", "optimization" ] }
swc_ecma_minifier = "0.171.5"

# wasm-bindgen
# docs: https://rustwasm.github.io/docs/wasm-bindgen
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.5.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.61"

[features]
default = ["console_error_panic_hook"]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
# optimization for size (more aggressive)
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
